Added -levent and -levent_pthreads to link libldmssock and libldmsugni.
Otherwise, ldms_ls couldn't load them.

Change-Id: I0f1d8bcf99c1dad559516d69cb05f30c89e4ed24

--- a/ldms/src/xprt/Makefile.am
+++ b/ldms/src/xprt/Makefile.am
@@ -6,6 +6,7 @@ AM_CFLAGS = $(INCLUDES)
 
 if ENABLE_SOCK
 libldmssock_la_SOURCES = ldms_sock.c ldms_sock_xprt.h
+libldmssock_la_LIBADD = -levent -levent_pthreads
 lib_LTLIBRARIES += libldmssock.la
 endif
 
@@ -23,6 +24,7 @@ UGNI_LIBS = $(shell pkg-config --libs cray-ugni)
 libldmsugni_la_CFLAGS = $(AM_CFLGAS) $(PMI_CFLAGS) $(UGNI_CFLAGS)
 libldmsugni_la_LDFLAGS = $(PMI_LIBS) $(UGNI_LIBS)
 libldmsugni_la_SOURCES = ldms_ugni.c ldms_ugni.h
+libldmsugni_la_LIBADD = -levent -levent_pthreads
 lib_LTLIBRARIES += libldmsugni.la
 endif
 
