ldms: store, sampler, re-connecting path.
 1. store
 The stores now use store policy for configuration.
 The ldmsd now sends a list of metrics to the stores.
 The store plugins are modified to be compatible with
 the new interface.

 2. sampler
 Explicit component_id metric in each sampler is removed. Now,
 component_id is contained in metric udata. Explicit timestamp
 metric in each sampler is removed as well as it is redundant
 to timestamp in the metric set meta data.

 3. re-connecting path
 Host connection state is added into hostspec so that ldmsd
 will not re-connect during another reconnection. ldms_xprt_get
 is also called everytime when ldmsd try to do connection.

Change-Id: I11d281e00f58801792094028eecb2221c35d2ffb

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -29,6 +29,7 @@ OPTION_DEFAULT_ENABLE([sos], [ENABLE_SOS])
 OPTION_DEFAULT_ENABLE([mysql], [ENABLE_MYSQL])
 OPTION_DEFAULT_ENABLE([mysqlbulk], [ENABLE_MYSQLBULK])
 OPTION_DEFAULT_ENABLE([flatfile], [ENABLE_FLATFILE])
+OPTION_DEFAULT_ENABLE([csv], [ENABLE_CSV])
 
 dnl Options for sampler
 OPTION_DEFAULT_ENABLE([sampler], [ENABLE_SAMPLER])
