Fix Makefile.am bug in ldms::ldmsd.
Given that the module name is xxxx, having xxxx_CFLAGS will
automatically disable AM_CFLAGS, even though it is in the part of the
disabled code. So, we need to have xxxx_CFLAGS in every conditions.

Change-Id: If67e4ec0fbac0f49d6f189c6b3cd76f3897b5181

--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -8,9 +8,10 @@ ldms_ls_LDADD = $(CORE)/libldms.la -lrt
 ldmsd_SOURCES = ldmsd.c ldmsd_store.c
 ldmsd_LDADD = $(CORE)/libldms.la $(CORE)/libldmsplugin.la
 ldmsd_LDFLAGS = -levent -lpthread -levent_pthreads
+ldmsd_CFLAGS = $(AM_CFLAGS)
 if ENABLE_YAML
 ldmsd_LDFLAGS += -lyaml
-ldmsd_CFLAGS = $(AM_CFLAGS) -DENABLE_YAML
+ldmsd_CFLAGS += -DENABLE_YAML
 endif
 
 ldmsctl_SOURCES = ldmsctl.c
