Common library refactor.
zap is now moved into lib/. zap's configure.ac is combined with the existing
lib's configure.ac. zap's Makefile.am's are also modified to fit lib/ structure.
libcoll and libmmalloc are also separated into different subdirectories.

RPMs building is also working for lib/.
RPMs for lib/ are named with 'ovis-lib' prefix (e.g. ovis-lib-coll).

Change-Id: I0fceb576434a2a6b66a25837cd70e732f55a3220

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,3 +1,18 @@
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = src
 EXTRA_DIST = autogen.sh
+
+OVIS_LIB = $(PACKAGE_NAME)-$(PACKAGE_VERSION)
+OVIS_LIB_TARBALL = $(OVIS_LIB).tar.gz
+
+.PHONY: rpm
+rpm: dist-gzip
+	mkdir -p rpm/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
+	cp $(OVIS_LIB_TARBALL) rpm/SOURCES
+	rpmbuild -ba ovis-lib.spec
+
+rpm-clean:
+	rm -rf rpm/
+	rm -f $(OVIS_LIB_TARBALL)
+
+clean-local: rpm-clean
