--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -1,6 +1,15 @@
 nobase_include_HEADERS = ovis-test/test.h
 
-SUBDIRS = coll
+SUBDIRS = 
+
+if ENABLE_COLL
+SUBDIRS += coll
+endif
+
+if ENABLE_OVIS_UTIL
+SUBDIRS += ovis_util
+endif
+
 if ENABLE_ZAP
 SUBDIRS += zap
 endif
