Move test.h header into its own directory.
lib/src/test.h has been moved to lib/src/ovis-test/test.h to start its own
sub-project as a test suite for modules in OVIS project. This change also
modifies files that are affected by location changing.

Another RPM package is also created for the test suite (but now contains only
one file).

Change-Id: Ia94ddfea0915afd2f61fc308df6fdfa9b0cb22e2

--- a/lib/ovis-lib.spec.in
+++ b/lib/ovis-lib.spec.in
@@ -35,6 +35,18 @@ rm -f $RPM_BUILD_ROOT%{_libdir}/*.la
 %clean
 rm -rf $RPM_BUILD_ROOT
 
+%package test-dev
+Summary: OVIS test header file.
+Group: %{ovis_lib_grp}
+%description test-dev
+Test header file for OVIS development.
+
+%files test-dev
+%defattr(-,root,root)
+%{_includedir}/ovis-test/test.h
+%doc README COPYING ChangeLog
+#end test-dev
+
 %if "@ENABLE_COLL_TRUE@x" == "x"
 # ovis-lib-coll package
 %package coll
