--- a/sos/Makefile.am
+++ b/sos/Makefile.am
@@ -1,6 +1,10 @@
 
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = src swig
+SUBDIRS = src
+
+if ENABLE_SWIG
+SUBDIRS += swig
+endif
 
 EXTRA_DIST = autogen.sh
 
