lib: Change the directory and the include path of mmalloc to mmalloc/
Change-Id: Ibd34df07e166acceca81167be606de75815b78a3

--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -33,6 +33,7 @@ AC_SUBST(ac_configure_args)
 AC_OUTPUT(Makefile
 	  ovis-lib.spec
 	  src/Makefile src/coll/Makefile
+	  src/mmalloc/Makefile
 	  src/ovis_util/Makefile
 	  src/zap/Makefile
 	  src/zap/rdma/Makefile
