ldms & lib: Moved the content in ldmsd_ctrl.c to OVIS/lib
1. The attribute value list management in ldmsd_ctrl.c is in lib/src/ovis_util
2. The control functions in ldmsd_ctrl are in lib/src/ovis_ctrl

Change-Id: Ia1b74b80969a0a460070944271409d782c604e55

--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -6,7 +6,7 @@ ldms_ls_SOURCES = ldms_ls.c
 ldms_ls_LDADD = $(CORE)/libldms.la -lrt -lovis_util
 
 ldmsd_SOURCES = ldmsd.c ldmsd_store.c
-ldmsd_LDADD = $(CORE)/libldms.la $(CORE)/libldmsplugin.la
+ldmsd_LDADD = $(CORE)/libldms.la
 ldmsd_LDFLAGS = -levent -lpthread -levent_pthreads -lovis_util
 ldmsd_CFLAGS = $(AM_CFLAGS)
 if ENABLE_YAML
@@ -15,7 +15,5 @@ ldmsd_CFLAGS += -DENABLE_YAML
 endif
 
 ldmsctl_SOURCES = ldmsctl.c
-ldmsctl_LDADD = $(CORE)/libldms.la $(CORE)/libldmsplugin.la
-ldmsctl_LDFLAGS = -lreadline -ltermcap
-
-
+ldmsctl_LDADD = $(CORE)/libldms.la
+ldmsctl_LDFLAGS = -lreadline -ltermcap -lovis_ctrl -lovis_util
