--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -21,6 +21,7 @@ AC_C_CONST
 
 OPTION_DEFAULT_ENABLE([coll], [ENABLE_COLL])
 OPTION_DEFAULT_ENABLE([mmalloc], [ENABLE_MMALLOC])
+OPTION_DEFAULT_ENABLE([ovis_ctrl], [ENABLE_OVIS_CTRL])
 OPTION_DEFAULT_ENABLE([zap], [ENABLE_ZAP])
 OPTION_DEFAULT_ENABLE([ovis_util], [ENABLE_OVIS_UTIL])
 OPTION_DEFAULT_DISABLE([rdma], [ENABLE_RDMA])
@@ -34,6 +35,7 @@ AC_OUTPUT(Makefile
 	  ovis-lib.spec
 	  src/Makefile src/coll/Makefile
 	  src/mmalloc/Makefile
+	  src/ovis_ctrl/Makefile
 	  src/ovis_util/Makefile
 	  src/zap/Makefile
 	  src/zap/rdma/Makefile
