--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -10,6 +10,10 @@ if ENABLE_MMALLOC
 SUBDIRS += mmalloc
 endif
 
+if ENABLE_OVIS_CTRL
+SUBDIRS += ovis_ctrl
+endif
+
 if ENABLE_OVIS_UTIL
 SUBDIRS += ovis_util
 endif
