lib: zap: Added the ucontext field to the zap endpoint structure
Change-Id: I3607bbf894bde988cf7473e8d1ddecdae8cc600c

--- a/lib/src/zap/Makefile.am
+++ b/lib/src/zap/Makefile.am
@@ -9,7 +9,7 @@ SUBDIRS += test
 endif
 
 libzap_la_SOURCES = zap.c zap_priv.h
-
+libzap_la_LDFLAGS = -ldl
 libzapincludedir = $(includedir)/zap
 libzapinclude_HEADERS = zap.h
 
