ldms: Change the default enable/disable config of transport lib: Change the default enable/disable config of zap sos: Change the default enable/disable config of swig
Change-Id: I051480ef4404e7e0d4afebb156622654abfc0f75

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -15,12 +15,12 @@ OPTION_DEFAULT_ENABLE([mmap], [ENABLE_MMAP])
 OPTION_DEFAULT_ENABLE([perf], [ENABLE_PERF])
 OPTION_DEFAULT_ENABLE([sensors], [ENABLE_SENSORS])
 OPTION_DEFAULT_ENABLE([glib], [ENABLE_GLIB])
-OPTION_DEFAULT_ENABLE([yaml], [ENABLE_YAML])
+OPTION_DEFAULT_DISABLE([yaml], [ENABLE_YAML])
 
 dnl Options for transport
 OPTION_DEFAULT_ENABLE([xprt], [ENABLE_XPRT])
-OPTION_DEFAULT_ENABLE([ugni], [ENABLE_UGNI])
-OPTION_DEFAULT_ENABLE([rdma], [ENABLE_RDMA])
+OPTION_DEFAULT_DISABLE([ugni], [ENABLE_UGNI])
+OPTION_DEFAULT_DISABLE([rdma], [ENABLE_RDMA])
 OPTION_DEFAULT_ENABLE([sock], [ENABLE_SOCK])
 
 dnl Options for store
