--- a/sos/configure.ac
+++ b/sos/configure.ac
@@ -19,7 +19,7 @@ AC_PROG_CC_C_O
 AM_PROG_CC_C_O
 
 dnl Swig stuffs
-OPTION_DEFAULT_ENABLE([swig], [ENABLE_SWIG])
+OPTION_DEFAULT_DISABLE([swig], [ENABLE_SWIG])
 if test -z "$ENABLE_SWIG_TRUE"
 then
 AM_PATH_PYTHON(2.6)
