KCRA and RCA flags. NB: want lib64 as opposed to lib
Change-Id: I514842ef14bd5e184f1763cfaeeea426a83790f9

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -55,6 +55,10 @@ dnl Other libraries
 
 OPTION_DEFAULT_DISABLE([gpcd], [ENABLE_GPCD])
 OPTION_WITH([gpcd], [GPCD])
+OPTION_DEFAULT_DISABLE([rca], [ENABLE_RCA])
+OPTION_WITH([rca], [RCA])
+OPTION_DEFAULT_DISABLE([kcra], [ENABLE_KRCA])
+OPTION_WITH([kcra], [KCRA])
 
 OPTION_WITH([sos], [SOS])
 
