Add XXX/lib64 support in m4/options.m4 and Makefile.am's in ldms project.
Change-Id: I89671d46e56ed8466273b30843d2c3cae275bafd

--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -1,15 +1,15 @@
 sbin_PROGRAMS = ldmsd ldms_ls ldmsctl
 CORE = ../core
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I@OVIS_LIB_INCDIR@
-AM_LDFLAGS = -L@OVIS_LIB_LIBDIR@
+AM_LDFLAGS = -L@OVIS_LIB_LIB64DIR@ -L@OVIS_LIB_LIBDIR@
 
 ldms_ls_SOURCES = ldms_ls.c
 ldms_ls_LDADD = $(CORE)/libldms.la -lrt -lovis_util
 
 ldmsd_SOURCES = ldmsd.c ldmsd_store.c
 ldmsd_LDADD = $(CORE)/libldms.la
-ldmsd_LDFLAGS = $(AM_LDFLAGS) -L@LIBEVENT_LIBDIR@ -levent -lpthread \
-		-levent_pthreads -lovis_util -ldl
+ldmsd_LDFLAGS = $(AM_LDFLAGS) -L@LIBEVENT_LIB64DIR@ -L@LIBEVENT_LIBDIR@ \
+		-levent -lpthread -levent_pthreads -lovis_util -ldl
 ldmsd_CFLAGS = $(AM_CFLAGS) -I@LIBEVENT_INCDIR@
 if ENABLE_YAML
 ldmsd_LDFLAGS += -lyaml
