--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -4,7 +4,7 @@ lib_LTLIBRARIES =
 CORE = ../core
 
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I@OVIS_LIB_INCDIR@
-AM_LDFLAGS = -L@OVIS_LIB_LIBDIR@
+AM_LDFLAGS = -L@OVIS_LIB_LIB64DIR@ -L@OVIS_LIB_LIBDIR@
 COMMON_LIBADD = $(CORE)/libldms.la -lrt -lovis_util
 
 if ENABLE_GEMINFO
@@ -96,7 +96,8 @@ if ENABLE_GPCD
 if ENABLE_GEM_LINK_PERF
 libgem_link_perf_la_SOURCES = gem_link_perf.c
 libgem_link_perf_la_CFLAGS = $(AM_CFLAGS) -I@GPCD_INCDIR@ -I@RCA_INCDIR@
-libgem_link_perf_la_LDFLAGS = $(AM_LDFLAGS) -L@GPCD_LIBDIR@ -L@RCA_LIBDIR@ -lgpcd
+libgem_link_perf_la_LDFLAGS = $(AM_LDFLAGS) -L@GPCD_LIB64DIR@ -L@RCA_LIB64DIR@ \
+			      -L@GPCD_LIBDIR@ -L@RCA_LIBDIR@ -lgpcd
 libgem_link_perf_la_LIBADD = $(COMMON_LIBADD)
 lib_LTLIBRARIES += libgem_link_perf.la
 endif
