fix krca vs kcra typo
Change-Id: I1570498fbf2e846e4cf3b65381a4da86fc47d796

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -57,8 +57,8 @@ OPTION_DEFAULT_DISABLE([gpcd], [ENABLE_GPCD])
 OPTION_WITH([gpcd], [GPCD])
 OPTION_DEFAULT_DISABLE([rca], [ENABLE_RCA])
 OPTION_WITH([rca], [RCA])
-OPTION_DEFAULT_DISABLE([kcra], [ENABLE_KRCA])
-OPTION_WITH([kcra], [KCRA])
+OPTION_DEFAULT_DISABLE([krca], [ENABLE_KRCA])
+OPTION_WITH([krca], [KRCA])
 
 OPTION_WITH([sos], [SOS])
 
